--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ Cell2/Debug/Makefile
 Cell3/Debug/Makefile
 Main/Debug/Makefile
 Buck_Converter/Debug/Makefile
+uartOut/main.c
+Buck_Converter/main.c
+IC_Buck/Debug/Makefile
+IC_Buck/main.c
+Main/state.c
+Main/test_balance.c
+Test/main.c
+uartOut/Debug/Makefile
+uartOut/main.c
